Fix dark mode prompt

--- a/src/components/prompt/prompt.scss
+++ b/src/components/prompt/prompt.scss
@@ -47,6 +47,9 @@
     border-radius: 5px;
     border: 1px solid #e2e2e2;
     margin-bottom: 1.5rem;
+    background-color: var(--bg-color-2);
+    border: 0;
+    padding: 0.5rem 1rem;
   }
 
   &__submit {
